# stm32-common

./: .gitmodules  CMakeLists.txt  CompatStdCpp.cpp  Coverage.cmake  Doxygen.cmake  FreeRTOSCallback.cpp  Generic_Cortex_M3.ctools  Generic_Cortex_M4.ctools  Generic_STM32F4.cflags  Generic_STM32F4.ctools  Generic_cortex-m3.cflags  Generic_cortex-m4.cflags  Infrastructure.cpp  Jenkinsfile  LICENSE  ProjectVersion.cmake  README.md  STM32F4.code-workspace  STM32F4.doxyfile  STM32F4_BuildVersion.cmake  STM32F4_Doxygen.cmake  STM32F4_OpenOCD.cmake  STM32F4_Startup.cmake  STM32_Archives.cmake  STM32_BlackMagicProbe.cmake  STM32_BuildVersion.cmake  STM32_OpenOCD.cmake  STM32_Startup.cmake  UnitTest.cmake  UnitTestDummyStartUp.cpp  empty.c  gdbinit-bmp.tpl  gdbinit-stm32.tpl  gtest-main.cpp  stm32-common.srctrlprj  version.c  version.h
.github/: issue-branch.yml
.github/workflows/: cmake.yml
boards/: STM32F4_Discovery.cmake
boards/STM32F1_BluePill/: STM32F103xB.ld  startup_stm32f103xB.S  stm32-board.cmake  stm32f1bluepill.cfg
boards/STM32F4_BlackPill/: STM32F401XC.ld  startup_stm32f401xc.S  stm32-board.cmake
boards/STM32F4_Discovery/: STM32F407VGTx_FLASH.ld  startup_stm32f407xx.S  stm32-board.cmake  stm32f4-board.cmake
boards/STM32F4_Nucleo_F411RE/: STM32F411RE_FLASH.ld  startup_stm32f411xe.s  stm32-board.cmake  stm32f4-board.cmake
boards/STM32F4_Nucleo_L432KC/: STM32L432XX.ld  startup_stm32l432xx.S  stm32-board.cmake  stm32f4-board.cmake
include/common/: Infrastructure.hpp
stm32/: CMakeLists.txt
stm32/include/stm32/: CoreDbg.hpp  DbgMcu.hpp  Engine.hpp  Flash.hpp  Gpio.hpp  Itm.hpp  Iwdg.hpp  Nvic.hpp  Pll.hpp  Pwr.hpp  Rcc.hpp  RccEngine.hpp  Scb.hpp  Spi.hpp  Tpi.hpp  Uart.hpp
stm32/include/stm32/dma/: Channel.hpp  Engine.hpp  Stream.hpp  Types.hpp
stm32/stm32f1/: CMakeLists.txt
stm32/stm32f1/include/stm32/: Cpu.hpp
stm32/stm32f1/include/stm32f1/: Flash.hpp  GpioPinConfiguration.hpp  Mco.hpp  Nvic.hpp  PllCfg.hpp  Pwr.hpp  Rcc.hpp  Scb.hpp  Spi.hpp
stm32/stm32f1/include/stm32f1/dma/: Channel.hpp  Engine.hpp  Stream.hpp
stm32/stm32f1/include/stm32f1/usb/: Device.hpp  Endpoint.hpp  InEndpoint.hpp  OutEndpoint.hpp  Peripheral.hpp
stm32/stm32f1/usb/: CMakeLists.txt  Device.cpp  Endpoint.cpp  InEndpoint.cpp  OutEndpoint.cpp  Peripheral.cpp
stm32/stm32f4/: CMakeLists.txt  DmaChannelViaSTM32F4.cpp  SpiAccessViaSTM32F4.cpp  TimerChannelViaSTM32F4.cpp
stm32/stm32f4/include/stm32/: Cpu.hpp
stm32/stm32f4/include/stm32f4/: AdcViaSTM32F4.hpp  FlashViaSTM32F4.hpp  GpioPinConfiguration.hpp  Mco.hpp  NvicViaSTM32F4.hpp  PllCfg.hpp  PwrViaSTM32F4.hpp  Rcc.hpp  ScbViaSTM32F4.hpp
stm32/stm32f4/include/stm32f4/dma/: Channel.hpp  DmaChannel.hpp  DmaChannelViaSTM32F4.hpp  DmaEngineViaSTM32F4.hpp  DmaStreamViaSTM32F4.hpp  Engine.hpp  Stream.hpp
stm32/stm32f4/include/stm32f4/timer/: TimerChannelViaSTM32F4.hpp  TimerViaSTM32F4.hpp
stm32/stm32f4/usb/: CMakeLists.txt  InEndpointViaSTM32F4.cpp  OutEndpointViaSTM32F4.cpp  UsbCoreViaSTM32F4.cpp  UsbDeviceViaSTM32F4.cpp
stm32/stm32f4/usb/include/usb/: InEndpointViaSTM32F4.hpp  OutEndpointViaSTM32F4.hpp  UsbCoreViaSTM32F4.hpp  UsbDeviceViaSTM32F4.hpp
stm32/stm32f4/usb/testcases/: CMakeLists.txt  main.cpp  test_InEndpointViaSTM32F4.cpp  test_OutEndpointViaSTM32F4.cpp  test_UsbCoreViaSTM32F4.cpp  test_UsbDeviceViaSTM32F4.cpp
stm32/stm32l4/: CMakeLists.txt
stm32/stm32l4/include/stm32/: Cpu.hpp
stm32/stm32l4/include/stm32l4/: Mco.hpp  PllCfg.hpp  Rcc.hpp
stm32f4/: AdcViaSTM32F4.cpp  CMakeLists.txt  DmaEngineViaSTM32F4.cpp  DmaStreamViaSTM32F4.cpp  FlashViaSTM32F4.cpp  GpioAccessViaSTM32F4.cpp  NvicViaSTM32F4.cpp  PwrViaSTM32F4.cpp  RccViaSTM32F4.cpp  ScbViaSTM32F4.cpp  SpiAccessViaSTM32F4.cpp  TimerViaSTM32F4.cpp  UartAccessViaSTM32F4.cpp
stm32f4/include/stm32f4/: AdcViaSTM32F4.hpp  FlashViaSTM32F4.hpp  NvicViaSTM32F4.hpp  PwrViaSTM32F4.hpp  RccViaSTM32.hpp  RccViaSTM32F4.hpp  RccViaSTM32L4.hpp  ScbViaSTM32F4.hpp
stm32f4/include/stm32f4/dma/: DmaEngineViaSTM32F4.hpp  DmaTypesViaSTM32F4.hpp
stm32f4/include/stm32f4/gpio/: GpioAccessViaSTM32F4.hpp
stm32f4/include/stm32f4/spi/: SpiAccessViaSTM32F4.hpp
stm32f4/include/stm32f4/timer/: TimerChannel.hpp  TimerChannelViaSTM32F4.hpp  TimerViaSTM32F4.hpp
stm32f4/include/stm32f4/uart/: UartAccessViaSTM32F4.hpp
stm32f4/usb/: CMakeLists.txt  InEndpoint.cpp  InEndpointViaSTM32F4.cpp  OutEndpoint.cpp  OutEndpointViaSTM32F4.cpp  UsbCore.cpp  UsbCoreViaSTM32F4.cpp  UsbDevice.cpp  UsbDeviceViaSTM32F4.cpp  UsbIrqViaSTM32F4.cpp  UsbTypes.hpp
stm32f4/usb/include/usb/: InEndpoint.hpp  InEndpointViaSTM32F4.hpp  OutEndpoint.hpp  OutEndpointViaSTM32F4.hpp  UsbCore.hpp  UsbCoreViaSTM32F4.hpp  UsbCoreViaSTM32F4FromAddressPointer.cpp  UsbCoreViaSTM32F4FromAddressPointer.hpp  UsbCoreViaSTM32F4GpioHelper.cpp  UsbCoreViaSTM32F4GpioHelper.hpp  UsbDevice.hpp  UsbDeviceViaSTM32F4.hpp  UsbDeviceViaUsbCore.cpp
stm32f4/usb/stm32f4/: InEndpoint.cpp  InEndpoint.hpp  OutEndpoint.cpp  OutEndpoint.hpp  UsbCore.cpp  UsbCore.hpp  UsbDevice.cpp  UsbDevice.hpp
stm32f4/usb/testcases/: main.cpp  test_UsbCoreViaSTM32F4.cpp
tasks/: AdcSampler.cpp  AdcSampler.hpp  Button.cpp  Button.hpp  ButtonHandler.hpp  CMakeLists.txt  DebounceButton.hpp  FileReader.cpp  FileReader.hpp  FrameDisplayer.cpp  FrameDisplayer.hpp  FrameFilter.cpp  FrameFilter.hpp  FrameSampler.cpp  FrameSampler.hpp  GpioSampler.cpp  GpioSampler.hpp  Heartbeat.cpp  Heartbeat.hpp  InterruptSource.hpp  InterruptTask.cpp  InterruptTask.hpp  LedMatrixDisplay.cpp  LedMatrixDisplay.hpp  PeriodicTask.hpp  RuntimeStats.cpp  RuntimeStats.hpp  Task.cpp  Task.hpp  UsbMouse.hpp  Ws2812bDisplay.cpp  Ws2812bDisplay.hpp  mp3_decode.cpp  mp3_decode.hpp  pcm_play.cpp  pcm_play.hpp
